# yet-another-titanic-project

./: .gitignore  Dockerfile  README.md  coverage.lcov  requirements.txt  sample.kaggle.json  titanic_train.yaml
.github/workflows/: ci.yml
notebooks/: model.ipynb  model_evaluation.ipynb
titanicTraining/: cli.py  pyproject.toml
titanicTraining/src/: __init__.py  cli.py  dataset.py  pipeline.py  preprocessing.py  train.py  utils.py
titanicTraining/src/pipe/: __init__.py  pipeline.py  preprocessing.py
titanicTraining/src/tests/: test_dataset.py  test_pipeline.py  test_preprocessing.py
titanicTraining/tests/: test_dataset.py  test_pipeline.py  test_preprocessing.py
